apps/base/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: 248195880649.dkr.ecr.ap-southeast-1.amazonaws.com/result-app
          imagePullPolicy: Always
          ports:
            - containerPort: 80
