apps/base/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - name: vote
          image: 248195880649.dkr.ecr.ap-southeast-1.amazonaws.com/vote-app
          imagePullPolicy: Always
          ports:
            - containerPort: 80
