apps/base/vote-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: vote

spec:
  replicas: 2

  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app: vote

  template:
    metadata:
      labels:
        app: vote

    spec:
      containers:
        - name: vote

          image: 248195880649.dkr.ecr.ap-southeast-1.amazonaws.com/vote-app

          imagePullPolicy: Always

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20

  strategy:
    blueGreen:
      activeService: vote
      previewService: vote-preview

      autoPromotionEnabled: false
      #autoPromotionSeconds: 10

      scaleDownDelaySeconds: 30

      previewReplicaCount: 1
