apps/base/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: 248195880649.dkr.ecr.ap-southeast-1.amazonaws.com/vote-app
          imagePullPolicy: Always
