apps/base/worker-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: worker

spec:
  replicas: 2

  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      containers:
        - name: worker

          image: 248195880649.dkr.ecr.ap-southeast-1.amazonaws.com/worker-app

          imagePullPolicy: Always

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi

  strategy:
    canary:
      steps:
        - setWeight: 50
        - pause:
            duration: 30s
