apps/base/result-preview-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: result-preview

spec:
  type: ClusterIP

  selector:
    app: result

  ports:
    - port: 80
      targetPort: 80
