apps/base/result-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: result

  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"

    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"

    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"

    service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: "HTTP"

    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: "/"

    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: "traffic-port"

spec:
  type: LoadBalancer

  selector:
    app: result

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
