apps/base/vote-preview-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: vote-preview

spec:
  type: ClusterIP

  selector:
    app: vote

  ports:
    - port: 80
      targetPort: 80
