apps/base/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: voting-alb

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    alb.ingress.kubernetes.io/group.name: voting-app
    alb.ingress.kubernetes.io/group.order: "1"
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0

    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 80

          - path: /result
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 80
