apps/base/result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    # 👇 PHẢI GIỐNG vote để dùng chung ALB
    alb.ingress.kubernetes.io/group.name: voting-app
    alb.ingress.kubernetes.io/group.order: "2"

    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0

    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"    

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /result
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 80
